# QDiscord

./: .gitignore  .gitmodules  QDiscord_source.html  annotated.html  classQBasicAtomicInteger.html  classQBasicAtomicInteger__inherit__graph.map  classQBasicAtomicInteger__inherit__graph.md5  classQBasicAtomicPointer.html  classQBasicAtomicPointer__inherit__graph.map  classQBasicAtomicPointer__inherit__graph.md5  classQDiscord-members.html  classQDiscord.html  classQDiscordChannel-members.html  classQDiscordChannel.html  classQDiscordGame-members.html  classQDiscordGame.html  classQDiscordGuild-members.html  classQDiscordGuild.html  classQDiscordGuild__coll__graph.map  classQDiscordGuild__coll__graph.md5  classQDiscordGuild__inherit__graph.md5  classQDiscordMember-members.html  classQDiscordMember.html  classQDiscordMessage-members.html  classQDiscordMessage.html  classQDiscordRestComponent-members.html  classQDiscordRestComponent.html  classQDiscordRestComponent__coll__graph.md5  classQDiscordRestComponent__inherit__graph.map  classQDiscordRestComponent__inherit__graph.md5  classQDiscordStateComponent-members.html  classQDiscordStateComponent.html  classQDiscordStateComponent__coll__graph.md5  classQDiscordStateComponent__inherit__graph.map  classQDiscordStateComponent__inherit__graph.md5  classQDiscordUser-members.html  classQDiscordUser.html  classQDiscordUtilities-members.html  classQDiscordWsComponent-members.html  classQDiscordWsComponent.html  (+183 more)
QDiscord/: .clang-format  CMakeLists.txt  Doxyfile  QDiscord.pri  QDiscord.pro  config.cmake  config.pri
QDiscord/cmake/: config-package.cmake  cpack-package.cmake  qdiscord-config.cmake.in
QDiscord/doc/: doc.cmake  mainpage.dox
QDiscord/include/qdiscord.d/: qdiscord.hpp  qdiscordabstractstate.hpp  qdiscordbucket.hpp  qdiscordchannel.hpp  qdiscordguild.hpp  qdiscordid.hpp  qdiscordjsondecoder.hpp  qdiscordlogging.hpp  qdiscordmessage.hpp  qdiscordpermissionoverwrite.hpp  qdiscordrest.hpp  qdiscordrole.hpp  qdiscordroute.hpp  qdiscordstate.hpp  qdiscordtoken.hpp  qdiscorduseragent.hpp  qdiscordutilities.hpp  qdiscordws.hpp
QDiscord/qml/: CMakeLists.txt  qmldir
QDiscord/qml/include/: discordtoken.hpp  discorduseragent.hpp  qdiscordqml.hpp
QDiscord/qml/src/: discordtoken.cpp  discorduseragent.cpp  qdiscordqml.cpp
QDiscord/src/: qdiscord.cpp  qdiscordabstractstate.cpp  qdiscordattachment.cpp  qdiscordbucket.cpp  qdiscordchannel.cpp  qdiscorddiscriminator.cpp  qdiscordgame.cpp  qdiscordguild.cpp  qdiscordid.cpp  qdiscordjsondecoder.cpp  qdiscordlogging.cpp  qdiscordmember.cpp  qdiscordmessage.cpp  qdiscordpermission.cpp  qdiscordpermissionoverwrite.cpp  qdiscordrest.cpp  qdiscordrole.cpp  qdiscordroute.cpp  qdiscordstate.cpp  qdiscordtoken.cpp  qdiscorduser.cpp  qdiscorduseragent.cpp  qdiscordutilities.cpp  qdiscordws.cpp  src.pro
QDiscord/src/models/: qdiscordattachment.cpp  qdiscordchannel.cpp  qdiscorddiscriminator.cpp  qdiscordgame.cpp  qdiscordguild.cpp  qdiscordid.cpp  qdiscordmember.cpp  qdiscordmessage.cpp  qdiscordmodel.cpp  qdiscordpermission.cpp  qdiscordpermissionoverwrite.cpp  qdiscordrole.cpp  qdiscorduser.cpp
QDiscord/src/qdiscord.d/: qdiscord.cpp  qdiscord.hpp  qdiscord_global.hpp  qdiscordabstractstate.cpp  qdiscordabstractstate.hpp  qdiscordattachment.cpp  qdiscordattachment.hpp  qdiscordbucket.cpp  qdiscordbucket.hpp  qdiscordchannel.cpp  qdiscordchannel.hpp  qdiscorddiscriminator.cpp  qdiscorddiscriminator.hpp  qdiscordgame.cpp  qdiscordgame.hpp  qdiscordguild.cpp  qdiscordguild.hpp  qdiscordid.cpp  qdiscordid.hpp  qdiscordjsondecoder.cpp  qdiscordjsondecoder.hpp  qdiscordmember.cpp  qdiscordmember.hpp  qdiscordmessage.cpp  qdiscordmessage.hpp  qdiscordpermission.cpp  qdiscordpermission.hpp  qdiscordpermissionoverwrite.cpp  qdiscordrest.cpp  (+22 more)
QDiscord/tests/: tests.pri
(+119 files in other folders)
